<resources>
    <string name="app_name">StreamIt</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter Title</string>
    <string name="search_button">Search</string>
    <string name="search_empty_toast">Please enter a movie or show title.</string>
    <string name="loading">Loading…</string>
    <string name="searching">Searching…</string>
    <string name="search_error">An error occurred while search. Please try again.</string>
    <string name="movie_icon_placeholder">Movie Icon</string>
    <string name="movie_title_placeholder">Movie Title</string>
    <string name="movie">Movie</string>
    <string name="tv_show">TV Show</string>

    <string name="banner_ad_unit_id">ca-app-pub-1401987492890753/7754128224</string>
    <string name="banner_ad_movie_details_id">ca-app-pub-1401987492890753/1567993827</string>
    <string name="banner_add_movie_list">ca-app-pub-1401987492890753/4995257422</string>

    <string name="title_activity_movie_details">Details</string>
    <string name="imdb_info">IMDB Info</string>
    <string name="movie_icon">Movie Icon</string>
    <string name="results">Results</string>
    <string name="instructions">Enter a title to see if it can be viewed online.</string>
    <string name="free_source">"Free Sources: "</string>
    <string name="subscription_source">"Subscription Sources: "</string>
    <string name="paid_sources">"Paid Sources: "</string>
    <string name="no_results_title">No Results</string>
    <string name="no_results_message">No results for search title found.</string>
    <string name="ok">OK</string>
    <string name="netflix_info">Netflix is not included. Why?</string>
    <string name="nexflix_full_text">Netflix is not currently sharing their information with new applications. Hopefully this will soon change.</string>
    <string name="netflix_title">Netflix</string>
    <string name="no_sources">No sources available</string>
    <string name="sources_title">Sources</string>
    <string name="title_activity_show_selection">Episodes</string>
    <string name="new_search">New Search</string>
    <string name="generic_error">An error has occurred. Please try again.</string>
    <string name="share">Share</string>
</resources>
